--- a/pro/index.html
+++ b/pro/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
-<script defer src="assets/js/mainaba96c5ea3202b01147f.js"></script><script defer src="assets/js/globalaba96c5ea3202b01147f.js"></script><script defer src="assets/js/imgaba96c5ea3202b01147f.js"></script><script defer src="assets/js/indexaba96c5ea3202b01147f.js"></script><link href="assets/css/mainaba96c5ea3202b01147f.css" rel="stylesheet"></head>
+    <title>1111幸福企業</title>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<script defer src="assets/js/main561bd7d31fb70a190926.js"></script><script defer src="assets/js/global561bd7d31fb70a190926.js"></script><script defer src="assets/js/img561bd7d31fb70a190926.js"></script><script defer src="assets/js/index561bd7d31fb70a190926.js"></script><script defer src="assets/js/swiper561bd7d31fb70a190926.js"></script><link href="assets/css/main561bd7d31fb70a190926.css" rel="stylesheet"></head>
 <body>
     <header><nav>
     <h1 class="nav-brand">
@@ -63,13 +64,9 @@
 
     <div class="bg"></div>
     <div class="button" tabindex="0">
-  
-      <span class="icon-bar"></span>
-  
-      <span class="icon-bar"></span>
-  
-      <span class="icon-bar"></span>
-  
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
     </div>
     <div id="nav-content" tabindex="0">
         <ul class="mobile-main-menu">
@@ -118,8 +115,25 @@
     </div>
 </div></header>
     <h1>index</h1>
-    <swiper><p>32432342 <br> 32424524243</p></swiper>
-    <card-job><div class="card-job">
+    <div class="swiper">
+        <swiper><div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="assets/img/swiper-img.png" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/swiper-img.png" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/swiper-img.png" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/swiper-img.png" alt=""></div>
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
+</div></swiper>
+    </div>
+    <section class="cardJob">
+        <div class="title">
+            <h2>嚴選推薦 幸福職缺</h2>
+            <p>探索屬於你的幸福企業，從對的選擇開始！</p>
+        </div>
+        <card-job><div class="card-job">
     <img src="assets/img/job-card-cov.png" alt="">
     <div class="card-content">
         <div class="job-title">
@@ -368,6 +382,8 @@
 </div>
 
 </card-job>
+    </section>
+
     <section class="article">
         <div class="title">
             <h2>幸福企業 深入報導</h2>
@@ -462,7 +478,6 @@
             </div>
         </div>
     </section>
-
     <footer><div class="container-footer">
     <p class="gotop">
         <a id="button"><img src="assets/img/goToTop.svg"></a>
