--- a/pro/archive-coverage.html
+++ b/pro/archive-coverage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文章列表 - 企業報導</title>
-<script defer src="assets/js/main0df3708e936b70e45168.js"></script><script defer src="assets/js/global0df3708e936b70e45168.js"></script><script defer src="assets/js/img0df3708e936b70e45168.js"></script><script defer src="assets/js/index0df3708e936b70e45168.js"></script><link href="assets/css/main0df3708e936b70e45168.css" rel="stylesheet"></head>
+<script defer src="assets/js/main3ca7ae8ea47a2cd21295.js"></script><script defer src="assets/js/global3ca7ae8ea47a2cd21295.js"></script><script defer src="assets/js/img3ca7ae8ea47a2cd21295.js"></script><script defer src="assets/js/index3ca7ae8ea47a2cd21295.js"></script><link href="assets/css/main3ca7ae8ea47a2cd21295.css" rel="stylesheet"></head>
 
 <body>
     <header><nav>
@@ -490,33 +490,34 @@
                     </div>
                 </div>
             </div>
-            <div class="pagination pgnb-style2">
-                <div class="g-pagination">
-                    <!-- 上一頁在有前一頁時才會顯現 -->
-                    <a href="" class="previous tag">上一頁
-                        <span>
-                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M8.63626 18.6356L9.99988 19.9993L19.9997 9.9994L18.6361 8.63579L8.63626 18.6356Z" fill="#EF6262"/>
-                                <path d="M18.6363 11.3631L19.9999 9.99951L10 -0.000352563L8.6364 1.36327L18.6363 11.3631Z" fill="#EF6262"/>
-                            </svg>
-                        </span>
-                    </a>
-                    <select name="page">
-                        <option value="第一頁">第一頁</option>
-                        <option value="第二頁">第二頁</option>
-                        <option value="第三頁">第三頁</option>
-                    </select>
-                    <!-- 若沒有下一頁內容則隱藏 -->
-                    <a href="" class="next tag">下一頁
-                        <span>
-                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M8.63626 18.6356L9.99988 19.9993L19.9997 9.9994L18.6361 8.63579L8.63626 18.6356Z" fill="#EF6262"/>
-                                <path d="M18.6363 11.3631L19.9999 9.99951L10 -0.000352563L8.6364 1.36327L18.6363 11.3631Z" fill="#EF6262"/>
-                            </svg>
-                        </span>
-                    </a>
-                </div>
-            </div>  
+            <pgnb-second class="pagination pgnb-style2"><div class="g-pagination">
+    <!-- 上一頁在有前一頁時才會顯現 -->
+    <a href="" class="previous tag">上一頁
+        <span>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.63626 18.6356L9.99988 19.9993L19.9997 9.9994L18.6361 8.63579L8.63626 18.6356Z" fill="#EF6262"/>
+                <path d="M18.6363 11.3631L19.9999 9.99951L10 -0.000352563L8.6364 1.36327L18.6363 11.3631Z" fill="#EF6262"/>
+            </svg>
+        </span>
+    </a>
+    <select name="page">
+        <option value="第一頁">第一頁</option>
+        <option value="第二頁">第二頁</option>
+        <option value="第三頁">第三頁</option>
+    </select>
+    <!-- 若沒有下一頁內容則隱藏 -->
+    <a href="" class="next tag">下一頁
+        <span>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.63626 18.6356L9.99988 19.9993L19.9997 9.9994L18.6361 8.63579L8.63626 18.6356Z" fill="#EF6262"/>
+                <path d="M18.6363 11.3631L19.9999 9.99951L10 -0.000352563L8.6364 1.36327L18.6363 11.3631Z" fill="#EF6262"/>
+            </svg>
+        </span>
+    </a>
+</div></pgnb-second>
+        </div>
+        <div class="ad-area">
+            
         </div>
     </div>
     <footer><div class="container-footer">
