新增品牌報名區塊(在index未分開) 更新swiper圖檔

--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,14 @@
             </div>
         </div>
     </section>
+
+    <section class="category">
+        <div class="title">
+            <h2>二○二三<br>品牌報名類別</h2>
+            <p>一份工作，一個選擇。一種感動，幸福一生。<br>在這裡，找尋你的感動。</p>
+        </div>
+        <img src="assets/img/category-img.png" alt="">
+    </section>
     <footer></footer>
 </body>
 </html>
