--- a/pro/index.html
+++ b/pro/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1111幸福企業</title>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-<script defer src="assets/js/main4ca86ed3a2db2c902dd9.js"></script><script defer src="assets/js/global4ca86ed3a2db2c902dd9.js"></script><script defer src="assets/js/img4ca86ed3a2db2c902dd9.js"></script><script defer src="assets/js/index4ca86ed3a2db2c902dd9.js"></script><link href="assets/css/main4ca86ed3a2db2c902dd9.css" rel="stylesheet"></head>
+<script defer src="assets/js/main558b7b7a294f9c2139f1.js"></script><script defer src="assets/js/global558b7b7a294f9c2139f1.js"></script><script defer src="assets/js/img558b7b7a294f9c2139f1.js"></script><script defer src="assets/js/index558b7b7a294f9c2139f1.js"></script><link href="assets/css/main558b7b7a294f9c2139f1.css" rel="stylesheet"></head>
 <body>
     <header><nav>
     <h1 class="nav-brand">
@@ -477,6 +477,14 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="category">
+        <div class="title">
+            <h2>二○二三<br>品牌報名類別</h2>
+            <p>一份工作，一個選擇。一種感動，幸福一生。<br>在這裡，找尋你的感動。</p>
+        </div>
+        <img src="assets/img/category-img.png" alt="">
     </section>
     <footer><div class="container-footer">
     <p class="gotop">
