--- a/pro/index.html
+++ b/pro/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
-<script defer src="assets/js/main4a6fb8b3119c34a156e6.js"></script><script defer src="assets/js/global4a6fb8b3119c34a156e6.js"></script><script defer src="assets/js/img4a6fb8b3119c34a156e6.js"></script><script defer src="assets/js/index4a6fb8b3119c34a156e6.js"></script><link href="assets/css/main4a6fb8b3119c34a156e6.css" rel="stylesheet"></head>
+<script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><script defer src="assets/js/index.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
 <body>
     <header><nav>
     <h1 class="nav-brand">
@@ -508,11 +508,9 @@
             <a href="#"><img src="assets/img/footer_twitter.png"></a>
         </p>
     </div>
-    <div class="footer-subscribe">
-        <input type="text" class="subscribeTerm" placeholder="E-mail">
-        <button type="submit" class="subscribeButton">
-            <p class="btn">訂閱電子報</p>
-        </button>
+    <div class="footer-subscribe classBtn">
+        <input type="email" placeholder="E-mail">
+        <button class="search-submit-btn btn">訂閱電子報</button>
     </div>
 </div>
 
