新增首頁各區塊RWD完｜修正footer版權區塊RWD

--- a/pro/archive-coverage.html
+++ b/pro/archive-coverage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文章列表 - 企業報導</title>
-<script defer src="assets/js/main558b7b7a294f9c2139f1.js"></script><script defer src="assets/js/global558b7b7a294f9c2139f1.js"></script><script defer src="assets/js/img558b7b7a294f9c2139f1.js"></script><script defer src="assets/js/index558b7b7a294f9c2139f1.js"></script><link href="assets/css/main558b7b7a294f9c2139f1.css" rel="stylesheet"></head>
+<script defer src="assets/js/main755cadb636d0f56cff43.js"></script><script defer src="assets/js/global755cadb636d0f56cff43.js"></script><script defer src="assets/js/img755cadb636d0f56cff43.js"></script><script defer src="assets/js/index755cadb636d0f56cff43.js"></script><link href="assets/css/main755cadb636d0f56cff43.css" rel="stylesheet"></head>
 
 <body>
     <header><nav>
@@ -117,10 +117,34 @@
 </div></header>
     <swiper><div class="swiper mySwiper">
     <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="assets/img/swiper-img.png" alt=""></div>
-        <div class="swiper-slide"><img src="assets/img/swiper-img.png" alt=""></div>
-        <div class="swiper-slide"><img src="assets/img/swiper-img.png" alt=""></div>
-        <div class="swiper-slide"><img src="assets/img/swiper-img.png" alt=""></div>
+        <div class="swiper-slide">
+            <img src="assets/img/swiper-img.png" alt="">
+            <div class="title">
+                <h2>二○二三 <br> 幸福企業票選</h2>
+                <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <img src="assets/img/swiper-img.png" alt="">
+            <div class="title">
+                <h2>二○二三 <br> 幸福企業票選</h2>
+                <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <img src="assets/img/swiper-img.png" alt="">
+            <div class="title">
+                <h2>二○二三 <br> 幸福企業票選</h2>
+                <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <img src="assets/img/swiper-img.png" alt="">
+            <div class="title">
+                <h2>二○二三 <br> 幸福企業票選</h2>
+                <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
+            </div>
+        </div>
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
@@ -496,7 +520,31 @@
                     </div>
                 </div>
             </div>
-            <pgnb-second class="pagination pgnb-style2"></pgnb-second>
+            <pgnb-second class="pagination pgnb-style2"><div class="g-pagination">
+    <!-- 上一頁在有前一頁時才會顯現 -->
+    <a href="" class="previous tag">上一頁
+        <span>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.63626 18.6356L9.99988 19.9993L19.9997 9.9994L18.6361 8.63579L8.63626 18.6356Z" fill="#EF6262"/>
+                <path d="M18.6363 11.3631L19.9999 9.99951L10 -0.000352563L8.6364 1.36327L18.6363 11.3631Z" fill="#EF6262"/>
+            </svg>
+        </span>
+    </a>
+    <select name="page">
+        <option value="第一頁">第一頁</option>
+        <option value="第二頁">第二頁</option>
+        <option value="第三頁">第三頁</option>
+    </select>
+    <!-- 若沒有下一頁內容則隱藏 -->
+    <a href="" class="next tag">下一頁
+        <span>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.63626 18.6356L9.99988 19.9993L19.9997 9.9994L18.6361 8.63579L8.63626 18.6356Z" fill="#EF6262"/>
+                <path d="M18.6363 11.3631L19.9999 9.99951L10 -0.000352563L8.6364 1.36327L18.6363 11.3631Z" fill="#EF6262"/>
+            </svg>
+        </span>
+    </a>
+</div></pgnb-second>
         </div>
         <div class="ad-area">
             
