--- a/pro/index.html
+++ b/pro/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1111幸福企業</title>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-<script defer src="assets/js/main0a62ff8044476edb4a5c.js"></script><script defer src="assets/js/global0a62ff8044476edb4a5c.js"></script><script defer src="assets/js/img0a62ff8044476edb4a5c.js"></script><script defer src="assets/js/index0a62ff8044476edb4a5c.js"></script><link href="assets/css/main0a62ff8044476edb4a5c.css" rel="stylesheet"></head>
+<script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><script defer src="assets/js/index.js"></script><script defer src="assets/js/swiper.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
 <body>
     <header><nav>
     <h1 class="nav-brand">
