--- a/src/archive-issue.html
+++ b/src/archive-issue.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>文章列表 - 企業報導</title>
+    <title>文章列表 - 企業特刊</title>
 </head>
-
 <body>
     <header></header>
     <swiper></swiper>
-    <div class="archive-tem archive-coverage-wrapper">
-        <div class="archive-tem-c archive-coverage-container">
-            <h2>幸福企業報導</h2>
+    <div class="archive-tem archive-issue-wrapper">
+        <div class="archive-tem-c archive-issue-container">
+            <h2>幸福企業特刊</h2>
             <div class="search-bar classBtn">
                 <input type="search" placeholder="輸入公司/品牌或職務關鍵字">
                 <button class="search-submit-btn btn">搜尋</button>
