--- a/pro/index.html
+++ b/pro/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1111幸福企業</title>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-<script defer src="assets/js/main755cadb636d0f56cff43.js"></script><script defer src="assets/js/global755cadb636d0f56cff43.js"></script><script defer src="assets/js/img755cadb636d0f56cff43.js"></script><script defer src="assets/js/index755cadb636d0f56cff43.js"></script><script defer src="assets/js/swiper755cadb636d0f56cff43.js"></script><script defer src="assets/js/cardJob755cadb636d0f56cff43.js"></script><link href="assets/css/main755cadb636d0f56cff43.css" rel="stylesheet"></head>
+<script defer src="assets/js/main76b33789f8c444ae8410.js"></script><script defer src="assets/js/global76b33789f8c444ae8410.js"></script><script defer src="assets/js/img76b33789f8c444ae8410.js"></script><script defer src="assets/js/index76b33789f8c444ae8410.js"></script><link href="assets/css/main76b33789f8c444ae8410.css" rel="stylesheet"></head>
 <body>
     <header><nav>
     <h1 class="nav-brand">
@@ -759,14 +759,7 @@
     </section>
 
     <section class="category">
-        <category><div class="category-section">
-    <div class="title">
-        <h2>品牌報名類別<br>二○二三</h2>
-        <p>在這裡，找尋你的感動。<br>一份工作，一個選擇。一種感動，幸福一生。</p>
-    </div>
-    <img src="assets/img/category-img.png" alt="">
-</div>
-</category>
+        <category></category>
     </section>
     <footer><div class="container-footer">
     <p class="gotop">
