--- a/pro/index.html
+++ b/pro/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1111幸福企業</title>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-<script defer src="assets/js/main755cadb636d0f56cff43.js"></script><script defer src="assets/js/global755cadb636d0f56cff43.js"></script><script defer src="assets/js/img755cadb636d0f56cff43.js"></script><script defer src="assets/js/index755cadb636d0f56cff43.js"></script><script defer src="assets/js/swiper755cadb636d0f56cff43.js"></script><script defer src="assets/js/cardJob755cadb636d0f56cff43.js"></script><link href="assets/css/main755cadb636d0f56cff43.css" rel="stylesheet"></head>
+<script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><script defer src="assets/js/index.js"></script><script defer src="assets/js/swiper.js"></script><script defer src="assets/js/cardJob.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
 <body>
     <header><nav>
     <h1 class="nav-brand">
