--- a/pro/archive-coverage.html
+++ b/pro/archive-coverage.html
@@ -6,19 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文章列表 - 企業報導</title>
-<<<<<<< HEAD
-<script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><script defer src="assets/js/index.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
-=======
-<<<<<<< HEAD
-<script defer src="assets/js/main76b33789f8c444ae8410.js"></script><script defer src="assets/js/global76b33789f8c444ae8410.js"></script><script defer src="assets/js/img76b33789f8c444ae8410.js"></script><script defer src="assets/js/index76b33789f8c444ae8410.js"></script><link href="assets/css/main76b33789f8c444ae8410.css" rel="stylesheet"></head>
-=======
-<<<<<<< HEAD
 <script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
-=======
-<script defer src="assets/js/main755cadb636d0f56cff43.js"></script><script defer src="assets/js/global755cadb636d0f56cff43.js"></script><script defer src="assets/js/img755cadb636d0f56cff43.js"></script><script defer src="assets/js/index755cadb636d0f56cff43.js"></script><link href="assets/css/main755cadb636d0f56cff43.css" rel="stylesheet"></head>
->>>>>>> 9be585abfe5fb9c5d8ee6d9821c825a9610b101d
->>>>>>> yian
->>>>>>> 6fe6fb83f08cc0a101f4d59bf8871854d06602ed
 
 <body>
     <header><nav>
@@ -532,7 +520,31 @@
                     </div>
                 </div>
             </div>
-            <pgnb-second class="pagination pgnb-style2"></pgnb-second>
+            <pgnb-second class="pagination pgnb-style2"><div class="g-pagination">
+    <!-- 上一頁在有前一頁時才會顯現 -->
+    <a href="" class="previous tag">上一頁
+        <span>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.63626 18.6356L9.99988 19.9993L19.9997 9.9994L18.6361 8.63579L8.63626 18.6356Z" fill="#EF6262"/>
+                <path d="M18.6363 11.3631L19.9999 9.99951L10 -0.000352563L8.6364 1.36327L18.6363 11.3631Z" fill="#EF6262"/>
+            </svg>
+        </span>
+    </a>
+    <select name="page">
+        <option value="第一頁">第一頁</option>
+        <option value="第二頁">第二頁</option>
+        <option value="第三頁">第三頁</option>
+    </select>
+    <!-- 若沒有下一頁內容則隱藏 -->
+    <a href="" class="next tag">下一頁
+        <span>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.63626 18.6356L9.99988 19.9993L19.9997 9.9994L18.6361 8.63579L8.63626 18.6356Z" fill="#EF6262"/>
+                <path d="M18.6363 11.3631L19.9999 9.99951L10 -0.000352563L8.6364 1.36327L18.6363 11.3631Z" fill="#EF6262"/>
+            </svg>
+        </span>
+    </a>
+</div></pgnb-second>
         </div>
         <div class="ad-area-wrapper">
             <div class="ad-area-container">
