--- a/pro/index.html
+++ b/pro/index.html
@@ -6,19 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1111幸福企業</title>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-<<<<<<< HEAD
 <script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><script defer src="assets/js/index.js"></script><script defer src="assets/js/swiper.js"></script><script defer src="assets/js/cardJob.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
-=======
-<<<<<<< HEAD
-<script defer src="assets/js/main76b33789f8c444ae8410.js"></script><script defer src="assets/js/global76b33789f8c444ae8410.js"></script><script defer src="assets/js/img76b33789f8c444ae8410.js"></script><script defer src="assets/js/index76b33789f8c444ae8410.js"></script><link href="assets/css/main76b33789f8c444ae8410.css" rel="stylesheet"></head>
-=======
-<<<<<<< HEAD
-<script defer src="assets/js/main.js"></script><script defer src="assets/js/global.js"></script><script defer src="assets/js/img.js"></script><script defer src="assets/js/index.js"></script><script defer src="assets/js/swiper.js"></script><link href="assets/css/main.css" rel="stylesheet"></head>
-=======
-<script defer src="assets/js/main755cadb636d0f56cff43.js"></script><script defer src="assets/js/global755cadb636d0f56cff43.js"></script><script defer src="assets/js/img755cadb636d0f56cff43.js"></script><script defer src="assets/js/index755cadb636d0f56cff43.js"></script><script defer src="assets/js/swiper755cadb636d0f56cff43.js"></script><script defer src="assets/js/cardJob755cadb636d0f56cff43.js"></script><link href="assets/css/main755cadb636d0f56cff43.css" rel="stylesheet"></head>
->>>>>>> 9be585abfe5fb9c5d8ee6d9821c825a9610b101d
->>>>>>> yian
->>>>>>> 6fe6fb83f08cc0a101f4d59bf8871854d06602ed
 <body>
     <header><nav>
     <h1 class="nav-brand">
@@ -771,7 +759,14 @@
     </section>
 
     <section class="category">
-        <category></category>
+        <category><div class="category-section">
+    <div class="title">
+        <h2>品牌報名類別<br>二○二三</h2>
+        <p>在這裡，找尋你的感動。<br>一份工作，一個選擇。一種感動，幸福一生。</p>
+    </div>
+    <img src="assets/img/category-img.png" alt="">
+</div>
+</category>
     </section>
     <footer><div class="container-footer">
     <p class="gotop">
