首頁修正：h1拿掉｜swiper文字順序更改｜h2標題手機版換行｜文章區塊顏色間距更改｜閱讀更多按鈕

--- a/pro/index.html
+++ b/pro/index.html
@@ -114,34 +114,33 @@
         </ul>
     </div>
 </div></header>
-    <h1>index</h1>
     <section class="swiper">
         <swiper><div class="swiper mySwiper">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <img src="assets/img/swiper-img.png" alt="">
-            <div class="title">
+            <div class="swiper-title">
                 <h2>二○二三 <br> 幸福企業票選</h2>
                 <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
             </div>
         </div>
         <div class="swiper-slide">
             <img src="assets/img/swiper-img.png" alt="">
-            <div class="title">
+            <div class="swiper-title">
                 <h2>二○二三 <br> 幸福企業票選</h2>
                 <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
             </div>
         </div>
         <div class="swiper-slide">
             <img src="assets/img/swiper-img.png" alt="">
-            <div class="title">
+            <div class="swiper-title">
                 <h2>二○二三 <br> 幸福企業票選</h2>
                 <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
             </div>
         </div>
         <div class="swiper-slide">
             <img src="assets/img/swiper-img.png" alt="">
-            <div class="title">
+            <div class="swiper-title">
                 <h2>二○二三 <br> 幸福企業票選</h2>
                 <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
             </div>
@@ -154,7 +153,7 @@
     </section>
     <section class="cardJob">
         <div class="title">
-            <h2>嚴選推薦 幸福職缺</h2>
+            <h2>嚴選推薦 <br class="br-rwd">幸福職缺</h2>
             <p>探索屬於你的幸福企業，從對的選擇開始！</p>
         </div>
         <card-job><div class="cardJob-section">
@@ -551,21 +550,21 @@
 
 
 </card-job>
-        <button>
-            <p class="btn">閱讀更多</p>
+        <button class="btn">
+            閱讀更多
         </button>
     </section>
 
     <section class="article">
         <div class="title">
-            <h2>幸福企業 深入報導</h2>
+            <h2>幸福企業 <br class="br-rwd">深入報導</h2>
             <p>看見，更多背後的故事</p>
         </div>
         <div class="article-section">
             <div class="article-item">
                 <img src="assets/img/article-cover.png" alt="">
                 <div class="article-content">
-                    <p>2019/11/29</p>
+                    <p class="p2">2019/11/29</p>
                     <h3>集團福利打趴同業 每年子女教育補助1萬2領到高中畢</h3>
                     <p>看到標題，別懷疑！幸福企業當道，為招募優秀人才，企業用「薪」攬才，更要用「心」吸菁。2012年創立的野椿餐飲集團，從Miacucina義式創意料理出發，現今全台已有5大品牌、23家據點。</p>
                 </div>
@@ -583,7 +582,7 @@
                 <div class="article-item">
                     <img src="assets/img/article-cover.png" alt="">
                     <div class="article-content">
-                        <p>2019/11/29</p>
+                        <p class="p2">2019/11/29</p>
                         <h4>集團福利打趴同業 每年子女教育補助1萬2領到高中畢</h4>
                         <p>看到標題，別懷疑！幸福企業當道，為招募優秀人才，企業用「薪」攬才，更要用「心」吸菁。2012年創立的野椿餐飲集團，從Miacucina義式創意料理出發，現今全台已有5大品牌、23家據點。</p>
                     </div>
@@ -600,7 +599,7 @@
                 <div class="article-item">
                     <img src="assets/img/article-cover.png" alt="">
                     <div class="article-content">
-                        <p>2019/11/29</p>
+                        <p class="p2">2019/11/29</p>
                         <h4>集團福利打趴同業 每年子女教育補助1萬2領到高中畢</h4>
                         <p>看到標題，別懷疑！幸福企業當道，為招募優秀人才，企業用「薪」攬才，更要用「心」吸菁。2012年創立的野椿餐飲集團，從Miacucina義式創意料理出發，現今全台已有5大品牌、23家據點。</p>
                     </div>
@@ -617,7 +616,7 @@
                 <div class="article-item">
                     <img src="assets/img/article-cover.png" alt="">
                     <div class="article-content">
-                        <p>2019/11/29</p>
+                        <p class="p2">2019/11/29</p>
                         <h4>集團福利打趴同業 每年子女教育補助1萬2領到高中畢</h4>
                         <p>看到標題，別懷疑！幸福企業當道，為招募優秀人才，企業用「薪」攬才，更要用「心」吸菁。2012年創立的野椿餐飲集團，從Miacucina義式創意料理出發，現今全台已有5大品牌、23家據點。</p>
                     </div>
@@ -634,7 +633,7 @@
                 <div class="article-item">
                     <img src="assets/img/article-cover.png" alt="">
                     <div class="article-content">
-                        <p>2019/11/29</p>
+                        <p class="p2">2019/11/29</p>
                         <h4>集團福利打趴同業 每年子女教育補助1萬2領到高中畢</h4>
                         <p>看到標題，別懷疑！幸福企業當道，為招募優秀人才，企業用「薪」攬才，更要用「心」吸菁。2012年創立的野椿餐飲集團，從Miacucina義式創意料理出發，現今全台已有5大品牌、23家據點。</p>
                     </div>
@@ -753,8 +752,8 @@
                 <div class="swiper-button-prev"></div>
             </div>
         </div>
-        <button>
-            <p class="btn">閱讀更多</p>
+        <button class="btn">
+            閱讀更多
         </button>
     </section>
 
@@ -808,21 +807,21 @@
             <img src="assets/img/footer_logo.png">
         </div>
         <p class="footer-share">
-            <a href="#"><img src="assets/img/footer_fb.png"></a>
-            <a href="#"><img src="assets/img/footer_line.png"></a>
-            <a href="#"><img src="assets/img/footer_twitter.png"></a>
+            <a href="#"><img src="assets/img/facebook-icon.svg"></a>
+            <a href="#"><img src="assets/img/line-icon.svg"></a>
+            <a href="#"><img src="assets/img/twitter-icon.svg"></a>
         </p>
     </div>
     <div class="footer-subscribe">
         <input type="text" class="subscribeTerm" placeholder="E-mail">
-        <button type="submit" class="subscribeButton">
-            <p class="btn">訂閱電子報</p>
+        <button class="btn" type="submit" >
+            訂閱電子報
         </button>
     </div>
 </div>
 
 <div class="footer-copy">
-    <p class="tag">© 1111人力銀行2023幸福企業 All Rights Reserved.</p>
+    <p>© 1111人力銀行2023幸福企業 All Rights Reserved.</p>
     <a href="" class="tag">隱私權宣告</a>
     <a href="" class="tag">使用條款</a>
 </div>
