--- a/pro/archive-coverage.html
+++ b/pro/archive-coverage.html
@@ -119,28 +119,28 @@
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <img src="assets/img/swiper-img.png" alt="">
-            <div class="title">
+            <div class="swiper-title">
                 <h2>二○二三 <br> 幸福企業票選</h2>
                 <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
             </div>
         </div>
         <div class="swiper-slide">
             <img src="assets/img/swiper-img.png" alt="">
-            <div class="title">
+            <div class="swiper-title">
                 <h2>二○二三 <br> 幸福企業票選</h2>
                 <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
             </div>
         </div>
         <div class="swiper-slide">
             <img src="assets/img/swiper-img.png" alt="">
-            <div class="title">
+            <div class="swiper-title">
                 <h2>二○二三 <br> 幸福企業票選</h2>
                 <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
             </div>
         </div>
         <div class="swiper-slide">
             <img src="assets/img/swiper-img.png" alt="">
-            <div class="title">
+            <div class="swiper-title">
                 <h2>二○二三 <br> 幸福企業票選</h2>
                 <p>人，一輩子有三分之一的時間都在工作<br>如果工作無法帶給你跟家一樣的溫度，<br>時間是那樣的度日如年，<br>或許，工作也能像在家一樣溫暖，<br>人生會更加圓滿<br>在這裡，我們極盡探索<br>為您，找到屬於您的幸福企業</p>
             </div>
@@ -590,21 +590,21 @@
             <img src="assets/img/footer_logo.png">
         </div>
         <p class="footer-share">
-            <a href="#"><img src="assets/img/footer_fb.png"></a>
-            <a href="#"><img src="assets/img/footer_line.png"></a>
-            <a href="#"><img src="assets/img/footer_twitter.png"></a>
+            <a href="#"><img src="assets/img/facebook-icon.svg"></a>
+            <a href="#"><img src="assets/img/line-icon.svg"></a>
+            <a href="#"><img src="assets/img/twitter-icon.svg"></a>
         </p>
     </div>
     <div class="footer-subscribe">
         <input type="text" class="subscribeTerm" placeholder="E-mail">
-        <button type="submit" class="subscribeButton">
-            <p class="btn">訂閱電子報</p>
+        <button class="btn" type="submit" >
+            訂閱電子報
         </button>
     </div>
 </div>
 
 <div class="footer-copy">
-    <p class="tag">© 1111人力銀行2023幸福企業 All Rights Reserved.</p>
+    <p>© 1111人力銀行2023幸福企業 All Rights Reserved.</p>
     <a href="" class="tag">隱私權宣告</a>
     <a href="" class="tag">使用條款</a>
 </div>
