--- a/src/index.html
+++ b/src/index.html
@@ -9,31 +9,30 @@
 </head>
 <body>
     <header></header>
-    <h1>index</h1>
     <section class="swiper">
         <swiper></swiper>
     </section>
     <section class="cardJob">
         <div class="title">
-            <h2>嚴選推薦 幸福職缺</h2>
+            <h2>嚴選推薦 <br class="br-rwd">幸福職缺</h2>
             <p>探索屬於你的幸福企業，從對的選擇開始！</p>
         </div>
         <card-job></card-job>
-        <button>
-            <p class="btn">閱讀更多</p>
+        <button class="btn">
+            閱讀更多
         </button>
     </section>
 
     <section class="article">
         <div class="title">
-            <h2>幸福企業 深入報導</h2>
+            <h2>幸福企業 <br class="br-rwd">深入報導</h2>
             <p>看見，更多背後的故事</p>
         </div>
         <div class="article-section">
             <div class="article-item">
                 <img src="assets/img/article-cover.png" alt="">
                 <div class="article-content">
-                    <p>2019/11/29</p>
+                    <p class="p2">2019/11/29</p>
                     <h3>集團福利打趴同業 每年子女教育補助1萬2領到高中畢</h3>
                     <p>看到標題，別懷疑！幸福企業當道，為招募優秀人才，企業用「薪」攬才，更要用「心」吸菁。2012年創立的野椿餐飲集團，從Miacucina義式創意料理出發，現今全台已有5大品牌、23家據點。</p>
                 </div>
@@ -51,7 +50,7 @@
                 <div class="article-item">
                     <img src="assets/img/article-cover.png" alt="">
                     <div class="article-content">
-                        <p>2019/11/29</p>
+                        <p class="p2">2019/11/29</p>
                         <h4>集團福利打趴同業 每年子女教育補助1萬2領到高中畢</h4>
                         <p>看到標題，別懷疑！幸福企業當道，為招募優秀人才，企業用「薪」攬才，更要用「心」吸菁。2012年創立的野椿餐飲集團，從Miacucina義式創意料理出發，現今全台已有5大品牌、23家據點。</p>
                     </div>
@@ -68,7 +67,7 @@
                 <div class="article-item">
                     <img src="assets/img/article-cover.png" alt="">
                     <div class="article-content">
-                        <p>2019/11/29</p>
+                        <p class="p2">2019/11/29</p>
                         <h4>集團福利打趴同業 每年子女教育補助1萬2領到高中畢</h4>
                         <p>看到標題，別懷疑！幸福企業當道，為招募優秀人才，企業用「薪」攬才，更要用「心」吸菁。2012年創立的野椿餐飲集團，從Miacucina義式創意料理出發，現今全台已有5大品牌、23家據點。</p>
                     </div>
@@ -85,7 +84,7 @@
                 <div class="article-item">
                     <img src="assets/img/article-cover.png" alt="">
                     <div class="article-content">
-                        <p>2019/11/29</p>
+                        <p class="p2">2019/11/29</p>
                         <h4>集團福利打趴同業 每年子女教育補助1萬2領到高中畢</h4>
                         <p>看到標題，別懷疑！幸福企業當道，為招募優秀人才，企業用「薪」攬才，更要用「心」吸菁。2012年創立的野椿餐飲集團，從Miacucina義式創意料理出發，現今全台已有5大品牌、23家據點。</p>
                     </div>
@@ -102,7 +101,7 @@
                 <div class="article-item">
                     <img src="assets/img/article-cover.png" alt="">
                     <div class="article-content">
-                        <p>2019/11/29</p>
+                        <p class="p2">2019/11/29</p>
                         <h4>集團福利打趴同業 每年子女教育補助1萬2領到高中畢</h4>
                         <p>看到標題，別懷疑！幸福企業當道，為招募優秀人才，企業用「薪」攬才，更要用「心」吸菁。2012年創立的野椿餐飲集團，從Miacucina義式創意料理出發，現今全台已有5大品牌、23家據點。</p>
                     </div>
@@ -221,8 +220,8 @@
                 <div class="swiper-button-prev"></div>
             </div>
         </div>
-        <button>
-            <p class="btn">閱讀更多</p>
+        <button class="btn">
+            閱讀更多
         </button>
     </section>
 
