--- a/src/application.html
+++ b/src/application.html
@@ -116,132 +116,137 @@
                 </div>
             </div>
             <div class="row brand-category">
-                <div class="title">
+                <div class="section-title">
                     <p class="h2">幸福企業宗旨</p>
                     <p class="p1">近年來由於少子化，造成台灣人才短缺，日益嚴重，今為吸引年輕人，更願投入各產業，同時也激勵業者提供更好的福利及願景，才能吸引更多優秀人才，1111人力銀行特舉辦本年度最喜愛幸福企業票選活動。</p>
                 </div>
                 <!-- 等小涵首頁的 -->
             </div>
             <div class="row info">
-                <div class="title">
-                    <p class="h2">票選說明</p>
-                    <button class="classBtn">投票獎勵說明</button>
-                </div>
-                <div class="bottom">
-                    <div class="col col-1">
-                        <div class="row">
-                            <h5>品牌報名</h5>
-                            <p class="p1">時間：<span class="red">即日起～3/31(五)</span></p>
-                            <p class="p1">方式：<span class="fw-300">線上填表</span></p>
-                            <p class="p1">報名說明：<span class="fw-300">因收到貴企業被推舉或主動報名之資訊，因此溫馨提醒後續排程如下。</span></p>
-                        </div>
-                        <div class="row">
-                            <h5>網路票選</h5>
-                            <p class="p1">時間：<span class="red">3/13(一)～6/13(二)</span></p>
-                            <p class="p1">方式：<span class="fw-300">凡參加票選者，皆有可有資格參加天天抽幸福金活動。<b>(票選期間每週一至週五天天抽出10名500元幸運兒)</b></span></p>
-                            <p class="p1">兌領方式：<span class="fw-300">每日中獎結果詳見活動網頁(中獎者須主動聯絡負責窗口，1111人力銀行不另行通知。) </span></p>
-                        </div>
-                        <div class="row">
-                            <h5>票選結果公告</h5>
-                            <p class="p1">時間：<span class="red">7/20(四)</span></p>
-                        </div>
-                        <div class="row">
-                            <h5>頒獎典禮</h5>
-                            <p class="p1">時間：<span class="red">9/22(五)</span></p>
-                        </div>
+                <div class="container">
+                    <div class="section-title">
+                        <p class="h2">票選說明</p>
+                        <button class="btn">投票獎勵說明</button>
                     </div>
-                    <div class="col col-2">
-                        <div class="row">
-                            <h5>秘密客評選</h5>
-                            <p class="p1">時間：<span class="red">6/19(一)～7/5(三)</span></p>
-                            <p class="p1">1111<span class="fw-300">人力銀行有超過800萬求職會員透過大數據撈取履歷上現職或曾在該企業服務的會員，寄發電子問卷給會員填寫，針對各品牌福利落實程度進行回覆</span></p>
-                            <p class="p1">評選流程暨占比：
-                                <ol>
-                                    <li>經廠商自薦或網友推薦了，由主辦單位評選小組針對資訊正確性、福利制度、勞資關係公開資訊進行蒐集與審核。</li>
-                                    <li>審核完成後進入網路票選階段，每人每天針對個別的參與品牌可投乙票，同日不可重複投給同乙家品牌，但同日可投給多家品牌，網路票選占總評比<b>60%</b>。</li>
-                                    <li>秘密客評選佔總評比<b>40%</b>。</li>
-                                    <li>ESG企業永續為加分題，若有相關資料可於報名時簡述或以<b>e-mail</b>方式另行提供給活動小組。</li>
-                                    <li>評選過程將邀集11大類指標性產官學專家，來共同響應活動參任顧問團，強化活動的專業度與公正性。</li>
-                                </ol>
-                            </p>
+                    <div class="bottom">
+                        <div class="col col-1">
+                            <div class="row">
+                                <h5>品牌報名</h5>
+                                <p class="p1">時間：<span class="red">即日起～3/31(五)</span></p>
+                                <p class="p1">方式：<span class="fw-300">線上填表</span></p>
+                                <p class="p1">報名說明：<span class="fw-300">因收到貴企業被推舉或主動報名之資訊，因此溫馨提醒後續排程如下。</span></p>
+                            </div>
+                            <div class="row">
+                                <h5>網路票選</h5>
+                                <p class="p1">時間：<span class="red">3/13(一)～6/13(二)</span></p>
+                                <p class="p1">方式：<span class="fw-300">凡參加票選者，皆有可有資格參加天天抽幸福金活動。<b>(票選期間每週一至週五天天抽出10名500元幸運兒)</b></span></p>
+                                <p class="p1">兌領方式：<span class="fw-300">每日中獎結果詳見活動網頁(中獎者須主動聯絡負責窗口，1111人力銀行不另行通知。) </span></p>
+                            </div>
+                            <div class="row">
+                                <h5>票選結果公告</h5>
+                                <p class="p1">時間：<span class="red">7/20(四)</span></p>
+                            </div>
+                            <div class="row">
+                                <h5>頒獎典禮</h5>
+                                <p class="p1">時間：<span class="red">9/22(五)</span></p>
+                            </div>
                         </div>
-                        <div class="row">
-                            <h5>活動小組聯繫人</h5>
-                            <p class="p1"> (02)8787-1111轉  8823 呂小姐    8939 謝小姐   8927 高小姐</p>
+                        <div class="col col-2">
+                            <div class="row">
+                                <h5>秘密客評選</h5>
+                                <p class="p1">時間：<span class="red">6/19(一)～7/5(三)</span></p>
+                                <p class="p1">1111<span class="fw-300">人力銀行有超過800萬求職會員透過大數據撈取履歷上現職或曾在該企業服務的會員，寄發電子問卷給會員填寫，針對各品牌福利落實程度進行回覆</span></p>
+                                <p class="p1">評選流程暨占比：
+                                    <ol class="p1">
+                                        <li>經廠商自薦或網友推薦了，由主辦單位評選小組針對資訊正確性、福利制度、勞資關係公開資訊進行蒐集與審核。</li>
+                                        <li>審核完成後進入網路票選階段，每人每天針對個別的參與品牌可投乙票，同日不可重複投給同乙家品牌，但同日可投給多家品牌，網路票選占總評比<b>60%</b>。</li>
+                                        <li>秘密客評選佔總評比<b>40%</b>。</li>
+                                        <li>ESG企業永續為加分題，若有相關資料可於報名時簡述或以<b>e-mail</b>方式另行提供給活動小組。</li>
+                                        <li>評選過程將邀集11大類指標性產官學專家，來共同響應活動參任顧問團，強化活動的專業度與公正性。</li>
+                                    </ol>
+                                </p>
+                            </div>
+                            <div class="row">
+                                <h5>活動小組聯繫人</h5>
+                                <p class="p1"> (02)8787-1111轉  8823 呂小姐    8939 謝小姐   8927 高小姐</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row brand-list">
-                <div class="title">
-                    <p class="h2">知名品牌</p>
-                    <p class="p1">出發吧！一切美好的生活，都從對的選擇開始。</p>
-                </div>
-                <div class="bottom">
-                    <div class="brand-item">
-                        <div class="brand-cover"><img src="" alt=""></div>
-                        <div class="brand-info">
-                            <img src="" alt="" class="brand-logo">
-                            <p class="p1 brand-category">半導體製造</p>
-                            <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
+                <div class="container">
+                    <div class="section-title">
+                        <p class="h2">知名品牌</p>
+                        <p class="p1">出發吧！一切美好的生活，都從對的選擇開始。</p>
+                    </div>
+                    <div class="bottom">
+                        <div class="brand-item">
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-info">
+                                <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
+                                <p class="p1 b-category">半導體製造</p>
+                                <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
+                            </div>
+                        </div>
+                        <div class="brand-item">
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-info">
+                                <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
+                                <p class="p1 b-category">半導體製造</p>
+                                <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
+                            </div>
+                        </div>
+                        <div class="brand-item">
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-info">
+                                <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
+                                <p class="p1 b-category">半導體製造</p>
+                                <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
+                            </div>
+                        </div>
+                        <div class="brand-item">
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-info">
+                                <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
+                                <p class="p1 b-category">半導體製造</p>
+                                <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
+                            </div>
+                        </div>
+                        <div class="brand-item">
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-info">
+                                <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
+                                <p class="p1 b-category">半導體製造</p>
+                                <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
+                            </div>
+                        </div>
+                        <div class="brand-item">
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-info">
+                                <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
+                                <p class="p1 b-category">半導體製造</p>
+                                <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
+                            </div>
+                        </div>
+                        <div class="brand-item">
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-info">
+                                <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
+                                <p class="p1 b-category">半導體製造</p>
+                                <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
+                            </div>
+                        </div>
+                        <div class="brand-item">
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-info">
+                                <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
+                                <p class="p1 b-category">半導體製造</p>
+                                <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="brand-item">
-                        <div class="brand-cover"><img src="" alt=""></div>
-                        <div class="brand-info">
-                            <img src="" alt="" class="brand-logo">
-                            <p class="p1 brand-category">半導體製造</p>
-                            <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
-                        </div>
-                    </div>
-                    <div class="brand-item">
-                        <div class="brand-cover"><img src="" alt=""></div>
-                        <div class="brand-info">
-                            <img src="" alt="" class="brand-logo">
-                            <p class="p1 brand-category">半導體製造</p>
-                            <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
-                        </div>
-                    </div>
-                    <div class="brand-item">
-                        <div class="brand-cover"><img src="" alt=""></div>
-                        <div class="brand-info">
-                            <img src="" alt="" class="brand-logo">
-                            <p class="p1 brand-category">半導體製造</p>
-                            <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
-                        </div>
-                    </div>
-                    <div class="brand-item">
-                        <div class="brand-cover"><img src="" alt=""></div>
-                        <div class="brand-info">
-                            <img src="" alt="" class="brand-logo">
-                            <p class="p1 brand-category">半導體製造</p>
-                            <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
-                        </div>
-                    </div>
-                    <div class="brand-item">
-                        <div class="brand-cover"><img src="" alt=""></div>
-                        <div class="brand-info">
-                            <img src="" alt="" class="brand-logo">
-                            <p class="p1 brand-category">半導體製造</p>
-                            <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
-                        </div>
-                    </div>
-                    <div class="brand-item">
-                        <div class="brand-cover"><img src="" alt=""></div>
-                        <div class="brand-info">
-                            <img src="" alt="" class="brand-logo">
-                            <p class="p1 brand-category">半導體製造</p>
-                            <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
-                        </div>
-                    </div>
-                    <div class="brand-item">
-                        <div class="brand-cover"><img src="" alt=""></div>
-                        <div class="brand-info">
-                            <img src="" alt="" class="brand-logo">
-                            <p class="p1 brand-category">半導體製造</p>
-                            <p class="p1 brand-name">日月光半導體製造股份有限公司(中壢廠)</p>
-                        </div>
-                    </div>
+                    <button class="btn">閱讀更多</button>
                 </div>
             </div>
         </div>
