首頁新增wrapper class 文章 職缺區塊手機版slider寬度調整 品牌類別區塊調整 增加layout名稱註解 增加Header頁面連結 修正廣告區塊圖片 新增幸福職涯頁面內容 增加公司,職缺tag layout檔案 新增頁籤連結樣式

--- a/src/archive-issue.html
+++ b/src/archive-issue.html
@@ -383,8 +383,8 @@
         </div>
         <div class="ad-area-wrapper">
             <div class="ad-area-container">
-                <div class="block"><img src="assets/img/ad-area-ex.png" alt=""></div>
-                <div class="block"><img src="assets/img/ad-area-ex.png" alt=""></div>
+                <div class="block"><img src="assets/img/ad-ex.png" alt=""></div>
+                <div class="block"><img src="assets/img/ad-ex.png" alt=""></div>
             </div>
         </div>
     </div>
