--- a/src/archive-coverage.html
+++ b/src/archive-coverage.html
@@ -385,8 +385,8 @@
         </div>
         <div class="ad-area-wrapper">
             <div class="ad-area-container">
-                <div class="block"><img src="assets/img/ad-area-ex.png" alt=""></div>
-                <div class="block"><img src="assets/img/ad-area-ex.png" alt=""></div>
+                <img src="assets/img/ad-ex.png" alt="">
+                <img src="assets/img/ad-ex.png" alt="">
             </div>
         </div>
     </div>
